--- a/tasks/erlang-rebar/release.yaml
+++ b/tasks/erlang-rebar/release.yaml
@@ -20,9 +20,7 @@ spec:
               optional: true
           name: ""
           resources:
-            requests:
-              cpu: 400m
-              memory: 600Mi
+            limits: {}            
           volumeMounts:
           - mountPath: /root/.gnupg
             name: release-gpg         
