--- a/tasks/flutter/release.yaml
+++ b/tasks/flutter/release.yaml
@@ -64,6 +64,26 @@ spec:
             flutter test
             flutter build apk
         - image: ghcr.io/jenkins-x/jx-changelog:0.3.0
+          name: promote-changelog-uat
+          resources: {}
+          script: |
+            #!/usr/bin/env sh
+            source .jx/variables.sh
+
+            if [ -d "charts/$REPO_NAME" ]; then
+            jx gitops yset -p version -v "$VERSION" -f ./charts/$REPO_NAME/Chart.yaml
+            jx gitops yset -p appVersion -v "$VERSION" -f ./charts/$REPO_NAME/Chart.yaml
+            jx gitops yset -p 'image.repository' -v $DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME -f ./charts/$REPO_NAME/values.yaml
+            jx gitops yset -p 'image.tag' -v "$VERSION" -f ./charts/$REPO_NAME/values.yaml;
+            else echo no charts; fi
+
+            git add * || true
+            git commit -a -m "chore: release $VERSION" --allow-empty
+            git tag -fa v$VERSION -m "Release version $VERSION"
+            git push --force origin v$VERSION
+
+            jx changelog create --draft --version v${VERSION}            
+        - image: ghcr.io/jenkins-x/jx-changelog:0.3.0
           name: promote-changelog
           resources: {}
           script: |
