--- a/tasks/javascript/release.yaml
+++ b/tasks/javascript/release.yaml
@@ -91,7 +91,10 @@ spec:
             #!/busybox/sh
             source .jx/variables.sh
             cp /tekton/creds-secrets/tekton-container-registry-auth/.dockerconfigjson /kaniko/.docker/config.json
-            /kaniko/executor $KANIKO_FLAGS --context=/workspace/source --dockerfile=${DOCKERFILE_PATH:-Dockerfile} --destination=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$VERSION
+            /kaniko/executor $KANIKO_FLAGS \
+              --context=/workspace/source \
+              --dockerfile=${DOCKERFILE_PATH:-Dockerfile} \
+              --destination=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$VERSION
         - image: ghcr.io/jenkins-x/jx-changelog:0.3.0
           name: promote-changelog-uat
           resources: {}
@@ -108,6 +111,7 @@ spec:
 
             git add * || true
             git commit -a -m "chore: release $VERSION" --allow-empty
+            git tag -fa v$VERSION -m "Release version $VERSION"
             git push --force origin v$VERSION
 
             jx changelog create --draft --version v${VERSION}            
