--- a/tasks/javascript/release.yaml
+++ b/tasks/javascript/release.yaml
@@ -110,11 +110,10 @@ spec:
             else echo no charts; fi
 
             git add * || true
-            git commit -a -m "chore: release $VERSION" --allow-empty
-            git tag -fa v$VERSION -m "Release version $VERSION"
+            git commit -a -m "Pre-release $VERSION" --allow-empty
             git push --force origin v$VERSION
 
-            jx changelog create --draft --version v${VERSION}            
+            jx changelog create --prerelease --version v${VERSION}            
         - image: ghcr.io/jenkins-x/jx-changelog:0.3.0
           name: promote-changelog
           resources: {}
