new step on changelog on draft prerelease for not tagging

--- a/tasks/javascript/release.yaml
+++ b/tasks/javascript/release.yaml
@@ -111,6 +111,7 @@ spec:
 
             git add * || true
             git commit -a -m "Pre-release $VERSION" --allow-empty
+            git tag -fa v$VERSION -m "Pre-release version $VERSION"
             git push --force origin v$VERSION
 
             jx changelog create --prerelease --version v${VERSION}            
