--- a/tasks/erlang-rebar/release.yaml
+++ b/tasks/erlang-rebar/release.yaml
@@ -116,11 +116,11 @@ spec:
             else echo no charts; fi
 
             git add * || true
-            git commit -a -m "chore: release $VERSION" --allow-empty
-            git tag -fa v$VERSION -m "Release version $VERSION"
+            git commit -a -m "Pre-release $VERSION" --allow-empty
+            git tag -fa v$VERSION -m "Pre-release version $VERSION"
             git push --force origin v$VERSION
 
-            jx changelog create --draft --version v${VERSION}            
+            jx changelog create --prerelease --version v${VERSION}       
         - image: ghcr.io/jenkins-x/jx-changelog:0.3.0
           name: promote-changelog
           resources: {}
