--- a/packs/git/.lighthouse/jenkins-x/release.yaml
+++ b/packs/git/.lighthouse/jenkins-x/release.yaml
@@ -23,7 +23,7 @@ spec:
           resources: {}
           script: |
             #!/usr/bin/env sh
-            jx-release-version --tag > VERSION
+            jx-release-version --tag --debug > VERSION
           env:
           - name: GIT_TOKEN
             valueFrom:
