--- a/tasks/apps/release.yaml
+++ b/tasks/apps/release.yaml
@@ -43,7 +43,7 @@ spec:
               memory: 600Mi
           script: |
             #!/usr/bin/env sh
-            jx-release-version --tag > VERSION
+            jx-release-version --tag --debug > VERSION
         - image: ghcr.io/jenkins-x/jx-boot:3.5.4
           name: jx-variables
           resources: {}
