--- a/tasks/erlang-rebar/release.yaml
+++ b/tasks/erlang-rebar/release.yaml
@@ -42,7 +42,7 @@ spec:
           resources: {}
           script: |
             #!/usr/bin/env sh
-            jx-release-version --tag > VERSION
+            jx-release-version --tag --debug > VERSION
         - image: ghcr.io/jenkins-x/jx-boot:3.5.4
           name: jx-variables
           resources: {}
@@ -139,7 +139,7 @@ spec:
             git commit -a -m "chore: release $VERSION" --allow-empty
             git tag -fa v$VERSION -m "Release version $VERSION"
             git push --force origin v$VERSION
-            
+
             jx changelog create --version v${VERSION}            
         - env:
           - name: GITHUB_TOKEN
