--- a/tasks/maven/release.yaml
+++ b/tasks/maven/release.yaml
@@ -52,7 +52,7 @@ spec:
           resources: {}
           script: |
             #!/usr/bin/env sh
-            jx-release-version --tag > VERSION
+            jx-release-version --tag --debug > VERSION
         - image: ghcr.io/jenkins-x/jx-boot:3.5.4
           name: jx-variables
           resources:
