--- a/tasks/erlang-rebar/release.yaml
+++ b/tasks/erlang-rebar/release.yaml
@@ -43,6 +43,10 @@ spec:
           script: |
             #!/usr/bin/env sh
             jx-release-version --tag --debug > VERSION
+        - name: next-version-uat
+          script: |
+            #!/usr/bin/env sh
+            jx-release-version -debug -next-version=semantic:strip-prerelease -output-format "{{.Major}}.{{.Minor}}.{{.Patch}}"-UAT-$BUILD_ID > VERSION            
         - image: ghcr.io/jenkins-x/jx-boot:3.5.4
           name: jx-variables
           resources: {}
