--- a/tasks/erlang-rebar/release.yaml
+++ b/tasks/erlang-rebar/release.yaml
@@ -43,7 +43,8 @@ spec:
           script: |
             #!/usr/bin/env sh
             jx-release-version --tag --debug > VERSION
-        - name: next-version-uat
+        - image: ghcr.io/jenkins-x/jx-release-version:2.6.0
+          name: next-version-uat
           script: |
             #!/usr/bin/env sh
             jx-release-version -debug -next-version=semantic:strip-prerelease -output-format "{{.Major}}.{{.Minor}}.{{.Patch}}"-UAT-$BUILD_ID > VERSION            
