--- a/tasks/maven/release.yaml
+++ b/tasks/maven/release.yaml
@@ -53,6 +53,11 @@ spec:
           script: |
             #!/usr/bin/env sh
             jx-release-version --tag --debug > VERSION
+        - image: ghcr.io/jenkins-x/jx-release-version:2.6.0
+          name: next-version-uat
+          script: |
+            #!/usr/bin/env sh
+            jx-release-version -debug -next-version=semantic:strip-prerelease -output-format "{{.Major}}.{{.Minor}}.{{.Patch}}"-UAT-$BUILD_ID > VERSION                        
         - image: ghcr.io/jenkins-x/jx-boot:3.5.4
           name: jx-variables
           resources:
@@ -78,6 +83,20 @@ spec:
         - image: ghcr.io/jenkins-x/jx-registry:0.1.8
           name: check-registry
           resources: {}
+        - image: sonarsource/sonar-scanner-cli:4.7.0
+          name: sonar-code-analisys
+          resources: {}
+          script: |
+            #!/bin/bash
+            source .jx/variables.sh
+            export SONAR_TOKEN=$SONAR_TOKEN
+            sonar-scanner \
+              -Dsonar.projectKey=$SONAR_PROJECT_KEY \
+              -Dsonar.exclusions=$SONAR_EXCLUSIONS \
+              -Dsonar.sourceEncoding=UTF-8 \
+              -Dsonar.sources=. \
+              -Dsonar.projectVersion=$VERSION \
+              -Dsonar.host.url=$SONAR_URL          
         - image: gcr.io/kaniko-project/executor:v1.6.0-debug
           name: build-container-build
           resources: {}
@@ -104,11 +123,11 @@ spec:
             else echo no charts; fi
 
             git add * || true
-            git commit -a -m "chore: release $VERSION" --allow-empty
-            git tag -fa v$VERSION -m "Release version $VERSION"
+            git commit -a -m "chore: Pre-release $VERSION" --allow-empty
+            git tag -fa v$VERSION -m "Prerelease version $VERSION"
             git push --force origin v$VERSION
 
-            jx changelog create --draft --version v${VERSION}
+            jx changelog create --prerelease --version v${VERSION}
         - image: ghcr.io/jenkins-x/jx-changelog:0.3.0
           name: promote-changelog
           resources: {}
