--- a/tasks/maven-java11/release.yaml
+++ b/tasks/maven-java11/release.yaml
@@ -52,6 +52,11 @@ spec:
           script: |
             #!/usr/bin/env sh
             jx-release-version --tag --debug > VERSION
+        - image: ghcr.io/jenkins-x/jx-release-version:2.6.0
+          name: next-version-uat
+          script: |
+            #!/usr/bin/env sh
+            jx-release-version -debug -next-version=semantic:strip-prerelease -output-format "{{.Major}}.{{.Minor}}.{{.Patch}}"-UAT-$BUILD_ID > VERSION             
         - image: ghcr.io/jenkins-x/jx-boot:3.5.4
           name: jx-variables
           resources:
@@ -100,10 +105,11 @@ spec:
             else echo no charts; fi
 
             git add * || true
-            git commit -a -m "chore: release $VERSION" --allow-empty
+            git commit -a -m "chore: Pre-release $VERSION" --allow-empty
+            git tag -fa v$VERSION -m "Pre-release version $VERSION"
             git push --force origin v$VERSION
 
-            jx changelog create --draft --prerelease --version v${VERSION}            
+            jx changelog create --prerelease --version v${VERSION}           
         - image: ghcr.io/jenkins-x/jx-changelog:0.3.0
           name: promote-changelog
           resources: {}
