--- a/tasks/maven-java11/release.yaml
+++ b/tasks/maven-java11/release.yaml
@@ -67,6 +67,14 @@ spec:
           script: |
             #!/usr/bin/env sh
             jx gitops variables
+        - image: node:8-slim
+          name: build-npm-install
+          resources: {}          
+          script: |
+            #!/usr/bin/env sh
+            source .jx/variables.sh
+            npm ci --prefer-offline --no-audit
+            ./node_modules/.bin/gulp release            
         - image: maven:3.6-openjdk-11
           name: build-mvn-deploy
           resources: {}
@@ -79,9 +87,38 @@ spec:
             mvn versions:set -DnewVersion=$VERSION
 
             mvn --no-transfer-progress clean deploy
+        - image: maven:3.6-openjdk-11
+          name: build-mvn-sonar-scan
+          resources: {}
+          script: |
+            #!/usr/bin/env bash
+            source .jx/variables.sh
+
+            mvn clean verify sonar:sonar \
+              -Dsonar.projectKey=$SONAR_PROJECT_KEY \
+              -Dsonar.exclusions=$SONAR_EXCLUSIONS \
+              -Dsonar.sourceEncoding=UTF-8 \
+              -Dsonar.sources=. \
+              -Dsonar.projectVersion=$VERSION \
+              -Dsonar.host.url=$SONAR_URL \
+              -Dsonar.login=$SONAR_TOKEN               
         - image: ghcr.io/jenkins-x/jx-registry:0.1.8
           name: check-registry
           resources: {}
+        - image: sonarsource/sonar-scanner-cli:4.7.0
+          name: sonar-code-analisys
+          resources: {}
+          script: |
+            #!/bin/bash
+            source .jx/variables.sh
+            export SONAR_TOKEN=$SONAR_TOKEN
+            sonar-scanner \
+              -Dsonar.projectKey=$SONAR_PROJECT_KEY \
+              -Dsonar.exclusions=$SONAR_EXCLUSIONS \
+              -Dsonar.sourceEncoding=UTF-8 \
+              -Dsonar.sources=. \
+              -Dsonar.projectVersion=$VERSION \
+              -Dsonar.host.url=$SONAR_URL           
         - image: gcr.io/kaniko-project/executor:v1.6.0-debug
           name: build-container-build
           resources: {}
