--- a/tasks/build-scan-push/build-scan-push.yaml
+++ b/tasks/build-scan-push/build-scan-push.yaml
@@ -46,41 +46,13 @@ spec:
       #!/bin/bash
       source .jx/variables.sh
       cat /workspace/source/scanresults.txt
-      jx gitops pr comment -c "\`\`\`  $(< /workspace/source/scanresults.txt)  \`\`\`"
-      if egrep -ri 'HIGH|CRITICAL' /workspace/source/scanresults.txt | grep -v 'Total'
+      if egrep -ri 'CRITICAL' /workspace/source/scanresults.txt | grep -v 'Total'
       then
       echo "Vulnerabilities found!"
       exit 1
       else
       echo "No vulnerabilities found."
-      fi      
-  - image: ghcr.io/jenkins-x/jx-boot:3.5.4
-    name: analyze
-    resources: {}
-    script: |
-      #!/bin/bash
-      source .jx/variables.sh
-      cat /workspace/source/scanresults.txt
-      if egrep -ri 'HIGH|CRITICAL' /workspace/source/scanresults.txt | grep -v 'Total'
-      then
-      echo "Vulnerabilities found!"
-      else
-      echo "No vulnerabilities found."
       fi
-  - image: ghcr.io/jenkins-x/jx-boot:3.7.8
-    name: analyze
-    resources: {}
-    script: |
-      #!/bin/bash
-      source .jx/variables.sh
-      cat /workspace/source/scanresults.txt
-      jx gitops pr comment -c "\`\`\`  $(< /workspace/source/scanresults.txt)  \`\`\`"
-      if egrep -ri 'HIGH|CRITICAL' /workspace/source/scanresults.txt | grep -v 'Total'
-      then
-      echo "Vulnerabilities found!"
-      else
-      echo "No vulnerabilities found."
-      fi      
   - image: gcr.io/go-containerregistry/crane/debug:59b5c06eb64f0b6500bd94d71b473adf6079e444
     name: push-container
     resources: {}
