--- a/tasks/build-scan-push/build-scan-push.yaml
+++ b/tasks/build-scan-push/build-scan-push.yaml
@@ -40,7 +40,7 @@ spec:
     script: |
       trivy image --skip-update --input /workspace/source/image.tar > /workspace/source/scanresults.txt
   - image: ghcr.io/jenkins-x/jx-boot:3.5.4
-    name: analyze-pr
+    name: analyze
     resources: {}
     script: |
       #!/bin/bash
