--- a/tasks/maven-java16/release.yaml
+++ b/tasks/maven-java16/release.yaml
@@ -59,6 +59,18 @@ spec:
             #!/usr/bin/env sh
             jx gitops variables
         - image: maven:3.8-openjdk-16
+          name: build-mvn-deploy-snapshot
+          resources: {}
+          script: |
+            #!/usr/bin/env bash
+            source .jx/variables.sh
+
+            # modify the pom.xml
+            echo "upgrading the pom to snapshot version $VERSION"
+            mvn versions:set -DnewVersion=$VERSION-SNAPSHOT
+
+            mvn --no-transfer-progress clean deploy            
+        - image: maven:3.8-openjdk-16
           name: build-mvn-deploy
           resources: {}
           script: |
