--- a/tasks/maven-java11/release.yaml
+++ b/tasks/maven-java11/release.yaml
@@ -56,7 +56,7 @@ spec:
           name: next-version-uat
           script: |
             #!/usr/bin/env sh
-            jx-release-version -debug -next-version=semantic:strip-prerelease -output-format "{{.Major}}.{{.Minor}}.{{.Patch}}"-UAT-$BUILD_ID > VERSION             
+            jx-release-version -debug -next-version=semantic:strip-prerelease -output-format "{{.Major}}.{{.Minor}}.{{.Patch}}"-UAT > VERSION             
         - image: ghcr.io/jenkins-x/jx-boot:3.5.4
           name: jx-variables
           resources:
@@ -83,7 +83,7 @@ spec:
             source .jx/variables.sh
 
             # modify the pom.xml
-            echo "upgrading the pom to snapshot version $VERSION"
+            echo "upgrading the pom to snapshot version $VERSION-SNAPSHOT"
             mvn versions:set -DnewVersion=$VERSION-SNAPSHOT
 
             mvn --no-transfer-progress clean deploy                 
