--- a/tasks/supply-chain-security/task.yaml
+++ b/tasks/supply-chain-security/task.yaml
@@ -52,3 +52,4 @@ spec:
       #!/bin/sh
       source .jx/variables.sh
       cat /workspace/source/sbom.json | /workspace/source/bin/grype > vulnerabilities.txt
+      cat vulnerabilities.txt
