--- a/tasks/build-scan-push/build-scan-push.yaml
+++ b/tasks/build-scan-push/build-scan-push.yaml
@@ -40,7 +40,7 @@ spec:
     script: |
       trivy image --skip-update --input /workspace/source/image.tar > /workspace/source/scanresults.txt
   - image: ghcr.io/jenkins-x/jx-boot:3.5.4
-    name: analyze
+    name: analyze-critical
     resources: {}
     script: |
       #!/bin/bash
@@ -53,6 +53,19 @@ spec:
       else
       echo "No vulnerabilities found."
       fi
+  - image: ghcr.io/jenkins-x/jx-boot:3.5.4
+    name: analyze
+    resources: {}
+    script: |
+      #!/bin/bash
+      source .jx/variables.sh
+      cat /workspace/source/scanresults.txt
+      if egrep -ri 'HIGH|CRITICAL' /workspace/source/scanresults.txt | grep -v 'Total'
+      then
+      echo "Vulnerabilities found!"
+      else
+      echo "No vulnerabilities found."
+      fi      
   - image: gcr.io/go-containerregistry/crane/debug:59b5c06eb64f0b6500bd94d71b473adf6079e444
     name: push-container
     resources: {}
