fix for trivy values

--- a/tasks/maven-java17/release.yaml
+++ b/tasks/maven-java17/release.yaml
@@ -112,7 +112,7 @@ spec:
             /kaniko/executor $KANIKO_FLAGS \
               --skip-unused-stages \
               --cache=true \
-              --cache-repo=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME_cache \
+              --cache-repo=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME \
               --cache-copy-layers \
               --cleanup \
               --context=/workspace/source \
