--- a/tasks/build-scan-push/build-scan-push.yaml
+++ b/tasks/build-scan-push/build-scan-push.yaml
@@ -24,15 +24,11 @@ spec:
       source .jx/variables.sh
       cp /tekton/creds-secrets/tekton-container-registry-auth/.dockerconfigjson /kaniko/.docker/config.json
       /kaniko/executor $KANIKO_FLAGS \
-        --skip-unused-stages \
-        --cache=true \
-        --cache-repo=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME_cache \
-        --cache-copy-layers \      
         --context=/workspace/source \
         --dockerfile=${DOCKERFILE_PATH:-Dockerfile} \
         --destination=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$VERSION \
         --no-push \
-        --tarPath image.tar \
+        --tarPath image.tar
       cp /kaniko/docker-credential-gcr /workspace/source
       cp /kaniko/docker-credential-ecr-login /workspace/source
       cp /kaniko/docker-credential-acr-env /workspace/source
