--- a/tasks/environment/release.yaml
+++ b/tasks/environment/release.yaml
@@ -33,18 +33,18 @@ spec:
           name: doctl-auth
           resources: {}
           script: |
-            doctl auth init --access-token $DO_ACCESS_TOKEN
+            auth init --access-token $DO_ACCESS_TOKEN
         - image: digitalocean/doctl:1.84.0
           name: doctl-ctx
           resources: {}
           script: |
-            doctl kubernetes cluster kubeconfig save $CLUSTER_ID
+            kubernetes cluster kubeconfig save $CLUSTER_ID
         - image: ghcr.io/jenkins-x/jx-admin:0.0.174
           name: ctx-change
           script: |
             #!/usr/bin/env sh
             echo "Changing context to $CLUSTER_NAME cluster"
-            jx ctx $CLUSTER_NAME 
+            jx ctx $CLUSTER_NAME
         - image: ghcr.io/jenkins-x/jx-admin:0.0.174
           name: admin-log
           resources:
