--- a/tasks/environment/release.yaml
+++ b/tasks/environment/release.yaml
@@ -33,12 +33,12 @@ spec:
           name: doctl-auth
           resources: {}
           script: |
-            auth init --access-token $DO_ACCESS_TOKEN
+            doctl auth init --access-token $DO_ACCESS_TOKEN
         - image: digitalocean/doctl:1.84.0
           name: doctl-ctx
           resources: {}
           script: |
-            kubernetes cluster kubeconfig save $CLUSTER_ID
+            doctl kubernetes cluster kubeconfig save $CLUSTER_ID
         - image: ghcr.io/jenkins-x/jx-admin:0.0.174
           name: ctx-change
           script: |
