--- a/tasks/erlang-rebar/release.yaml
+++ b/tasks/erlang-rebar/release.yaml
@@ -177,7 +177,18 @@ spec:
           script: |
             #!/usr/bin/env sh
             source .jx/variables.sh
-            jx gitops helm release --version $VERSION
+            jx gitops helm release --version $VERSION        
+        - env:
+          - name: GIT_TOKEN
+            valueFrom:
+              secretKeyRef:
+                key: password
+                name: tekton-git
+          - name: GIT_USER
+            valueFrom:
+              secretKeyRef:
+                key: username
+                name: tekton-git
         - image: ghcr.io/jenkins-x-plugins/jx-promote:0.1.0
           name: promote-jx-promote
           resources: {}
