--- a/tasks/erlang-rebar/release.yaml
+++ b/tasks/erlang-rebar/release.yaml
@@ -189,7 +189,7 @@ spec:
               secretKeyRef:
                 key: username
                 name: tekton-git
-        - image: ghcr.io/jenkins-x-plugins/jx-promote:0.1.0
+          image: ghcr.io/jenkins-x-plugins/jx-promote:0.1.0
           name: promote-jx-promote
           resources: {}
           script: |
