--- a/tasks/javascript/release.yaml
+++ b/tasks/javascript/release.yaml
@@ -73,6 +73,12 @@ spec:
             #!/bin/sh
             CI=true DISPLAY=:99 npm test
         - image: node:14-slim
+          name: build-npm-version
+          resources: {}
+          script: |
+            #!/bin/sh
+            npm --no-git-tag-version version $VERSION  
+        - image: node:14-slim
           name: build-npm-publish
           resources: {}
           script: |
