--- a/tasks/javascript/release.yaml
+++ b/tasks/javascript/release.yaml
@@ -77,6 +77,7 @@ spec:
           resources: {}
           script: |
             #!/bin/sh
+            source .jx/variables.sh
             npm --no-git-tag-version version $VERSION  
         - image: node:14-slim
           name: build-npm-publish
