--- a/tasks/javascript/release.yaml
+++ b/tasks/javascript/release.yaml
@@ -49,7 +49,7 @@ spec:
           name: next-version-uat
           script: |
             #!/usr/bin/env sh
-            jx-release-version -debug -next-version=semantic:strip-prerelease -output-format "{{.Major}}.{{.Minor}}.{{.Patch}}"-UAT-$BUILD_ID > VERSION            
+            jx-release-version -debug -next-version=semantic:strip-prerelease -output-format "{{.Major}}.{{.Minor}}.{{.Patch}}"-UAT > VERSION            
         - image: ghcr.io/jenkins-x/jx-boot:3.7.8
           name: jx-variables
           resources:
