git no global config

--- a/tasks/git-clone/git-clone.yaml
+++ b/tasks/git-clone/git-clone.yaml
@@ -26,10 +26,10 @@ spec:
       #!/bin/sh -xv
       export SUBDIR="source"
       echo "git cloning url: $REPO_URL version $PULL_BASE_REF@$PULL_BASE_SHA to dir: $SUBDIR"
-      git config --add user.name ${GIT_AUTHOR_NAME:-jenkins-x-bot}
-      git config --add user.email ${GIT_AUTHOR_EMAIL:-jenkins-x@jaraxa.com}
-      git config credential.helper 
-      git config url."https://".insteadOf git://
+      git config --global --add user.name ${GIT_AUTHOR_NAME:-jenkins-x-bot}
+      git config --global --add user.email ${GIT_AUTHOR_EMAIL:-jenkins-x@jaraxa.com}
+      git config --global credential.helper 
+      git config --global url."https://".insteadOf git://
       git clone --recurse-submodules $REPO_URL $SUBDIR
       cd $SUBDIR
       git reset --hard $PULL_BASE_SHA
