--- a/tasks/git-clone/git-clone-pr.yaml
+++ b/tasks/git-clone/git-clone-pr.yaml
@@ -27,9 +27,9 @@ spec:
       #!/bin/sh
       export SUBDIR="source"
       echo "git cloning url: $REPO_URL version $PULL_PULL_REF:$(echo $JOB_NAME | tr '[:lower:]' '[:upper:]')-$PULL_NUMBER@$PULL_PULL_SHA to dir: $SUBDIR"
-      git config --add user.name ${GIT_AUTHOR_NAME:-jenkins-x-bot}
-      git config --add user.email ${GIT_AUTHOR_EMAIL:-jenkins-x@googlegroups.com}
-      git config credential.helper store
+      git config --global --add user.name ${GIT_AUTHOR_NAME:-jenkins-x-bot}
+      git config --global --add user.email ${GIT_AUTHOR_EMAIL:-jenkins-x@googlegroups.com}
+      git config --global credential.helper store
       git clone --recurse-submodules $REPO_URL $SUBDIR
       cd $SUBDIR
       git fetch origin $PULL_PULL_REF:$(echo $JOB_NAME | tr '[:lower:]' '[:upper:]')-$PULL_NUMBER
