file ignore test

--- a/tasks/javascript/release.yaml
+++ b/tasks/javascript/release.yaml
@@ -142,6 +142,7 @@ spec:
           resources: {}
           script: |
             #!/usr/bin/env sh
+            set +x
             source .jx/variables.sh
 
             if [ -d "charts/$REPO_NAME" ]; then
