file ignore test

--- a/tasks/javascript/release.yaml
+++ b/tasks/javascript/release.yaml
@@ -122,7 +122,7 @@ spec:
           resources: {}
           script: |
             #!/usr/bin/env sh
-            set +x            
+            set +xv          
             source .jx/variables.sh
 
             if [ -d "charts/$REPO_NAME" ]; then
