--- a/tasks/javascript/release.yaml
+++ b/tasks/javascript/release.yaml
@@ -121,7 +121,7 @@ spec:
           name: promote-changelog-uat
           resources: {}
           script: |
-            #!/usr/bin/env sh -x       
+            #!/usr/bin/env sh    
             source .jx/variables.sh
 
             if [ -d "charts/$REPO_NAME" ]; then
